Update Meta “authors”

--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -2,3 +2,6 @@ authors:
   - slug: xorpio
     name: Oliver Wach
     introduction: Senior Software Developer
+  - slug: dejan
+    name: Dejan Guberinic
+    introduction: Senior Full-Stack Developer
